# rna-folding

./: .cursorignore  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: eda.ipynb
src/: eda.py
src/eda/: __init__.py
